--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+!**/src/main/**/bootstrap/openrussian_dump/
 
 ### STS ###
 .apt_generated
