--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-maven-plugin</artifactId>
+			<version>11.12.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-mysql</artifactId>
+			<version>11.12.0</version>
+		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
@@ -61,7 +70,22 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>11.12.0</version>
+				<configuration>
+					<url>jdbc:mysql://localhost:3306/russian</url>
+					<user>root</user>
+					<password>password</password>
+					<schemas>
+						<schema>russian</schema>
+					</schemas>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
+
+
 
 </project>
