--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.jakarta.persistence.validation.mode=none
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.flyway.baseline-on-migrate=true
+api.claude.key=${CLAUDE_KEY}
