--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.jakarta.persistence.validation.mode=none
 spring.mvc.hiddenmethod.filter.enabled=true
-spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=false
+#spring.flyway.baseline-on-migrate=true
+#spring.flyway.baseline-version=1
 api.claude.key=${CLAUDE_KEY}
