--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
             <artifactId>anthropic-java</artifactId>
             <version>2.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.genai</groupId>
+            <artifactId>google-genai</artifactId>
+            <version>1.22.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
