--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.flyway.enabled=false
 #spring.flyway.baseline-on-migrate=true
 #spring.flyway.baseline-version=1
 api.claude.key=${CLAUDE_KEY}
+spring.jpa.open-in-view=false
